--- a/index.html
+++ b/index.html
@@ -407,14 +407,14 @@ body {
     <div class="dropdown-content">
       <p style="margin-top: 0; margin-bottom: 0" align="left">
       <font face="Book Antiqua">
-      <a href="https://www.iitg.ac.in/sreeja/homepage/journals.html">Journals</a></font></p>
+      <a href="./journals.html">Journals</a></font></p>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Book Antiqua">
-      	<a href="https://www.iitg.ac.in/sreeja/homepage/conferences.html">
+      	<a href="./conferences.html">
 		Conferences</a></font></p>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Book Antiqua">
-      	<a href="https://www.iitg.ac.in/sreeja/homepage/bookchapters.html">Book 
+      	<a href="./bookchapters.html">Book 
 		Chapters</a>&nbsp;
 		
     </div>
