--- a/journals.html
+++ b/journals.html
@@ -567,23 +567,24 @@ body {
 	104601.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
-					<span style="font-family: Book Antiqua">Naik, A. P., </span>
+					Naik, A. P., and Pekkat, S. 
+	(2023). 
+					<span style="line-height: 107%; font-family: 'Book Antiqua'">
 					<span class="accordion-tabbedtab-mobile">
-					<span class="comma-separator">
-					<span style="line-height: 107%; font-family: 'Book Antiqua'; color: black; ">and Pekkat, S. (2023).
-					</span></span>
-					<span style="line-height: 107%; font-family: 'Book Antiqua'">An appraisal on the soil wetting water retention characteristic curve 
-	determined from mini disk infltrometer and sensor measurements. <i>Acta 
-	Geophysica</i>, 71:961–982,
-						<a href="https://doi.org/10.1007/s11600-022-00932-2">
-					<font color="#000000">https://doi.org/10.1007/s11600-022-00932-2</font></a>.</span></span></p>
-					</li>
+					An appraisal on the soil wetting water retention characteristic curve 
+	determined from mini disk infltrometer and sensor measurements. </span></span>
+					<i>Acta Geophysica</i>, 71:961-982,
+					<span class="accordion-tabbedtab-mobile">
+					<span style="line-height: 107%; font-family: 'Book Antiqua'">
+					<a href="https://doi.org/10.1007/s11600-022-00932-2">
+					<font color="#000000">https://doi.org/10.1007/s11600-022-00932-2</font></a>.</span></span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="line-height: 107%; font-family: 'Book Antiqua'">Bora, M. J., Cai, W., Pekkat, S., Garg, A., and Sreedeep, S. (2023). 
 	Development of a simplified theoretical model to determine erodibility of 
-	compacted soil in hole erosion test based on fluid energy transformation. <i>Acta Geotechnica</i>, 18:5441–5455
-						<a style="text-decoration: underline; text-underline: single" href="https://doi.org/10.1007/s11440-023-01877-6">
+	compacted soil in hole erosion test based on fluid energy transformation. <i>Acta Geotechnica</i>, 
+					18:5441-5455,
+					<a style="text-decoration: underline; text-underline: single" href="https://doi.org/10.1007/s11440-023-01877-6">
 					<font color="#000000">https://doi.org/10.1007/s11440-023-01877-6</font></a>.</span></p>
 					</li>
 					<li>
@@ -620,7 +621,8 @@ body {
 					<span style="line-height: 107%; font-family: 'Book Antiqua'">Bora, M., J., Bordoloi, S., Pekkat, S., Garg, A., and Sreedeep, S. and 
 	Rakesh, R., R. (2022). Assessment of soil erosion models for predicting soil 
 	loss in cracked vegetated compacted surface layer. <i>Acta Geophysica</i>, 
-	70:333–347 <a href="https://doi.org/10.1007/s11600-021-00698-z">
+					70:333-347,
+					<a href="https://doi.org/10.1007/s11600-021-00698-z">
 					<font color="#000000">https://doi.org/10.1007/s11600-021-00698-z</font></a>.</span></p>
 					</li>
 					<li>
