--- a/administrative.html
+++ b/administrative.html
@@ -348,10 +348,6 @@ body {
   <a href=" ./home.html">
 	<font size="4" color="#336600">Home</font></a>  
   </font></b>
-  
-  
-    
- 
    
      <div class="dropdown">
     <button class="dropbtn"><b>
@@ -379,11 +375,6 @@ body {
   </font></b>
   
   
-  
-  
-  
-
-  
     
   <div class="dropdown">
     <button class="dropbtn"><b>
@@ -406,8 +397,7 @@ body {
   </div> 
   
   
-  
-  
+   
   
    <div class="dropdown">
     <button class="dropbtn"><b>
@@ -418,14 +408,14 @@ body {
     <div class="dropdown-content">
       <p style="margin-top: 0; margin-bottom: 0" align="left">
       <font face="Book Antiqua">
-      <a href="https://www.iitg.ac.in/sreeja/homepage/journals.html">Journals</a></font></p>
+      <a href="./journals.html">Journals</a></font></p>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Book Antiqua">
-      	<a href="https://www.iitg.ac.in/sreeja/homepage/conferences.html">
+      	<a href="./conferences.html">
 		Conferences</a></font></p>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Book Antiqua">
-      	<a href="https://www.iitg.ac.in/sreeja/homepage/bookchapters.html">Book 
+      	<a href="./bookchapters.html">Book 
 		Chapters</a>&nbsp;
 		
     </div>
