--- a/researchexperience.html
+++ b/researchexperience.html
@@ -522,24 +522,36 @@ body {
 			<font face="Book Antiqua" size="4" color="#006600">Projects</font></b></p>
 			<ul>
 				<li>
-				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; line-height:150%">
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
 				<font face="Book Antiqua" color="#333333">Development of Intensity 
 		Duration Frequency Curves for Noth East India, Sponsored by Ministry of 
 		Earth Sciences, Govt. of India (PI). </font></p></li>
 				<li>
-				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; line-height:150%">
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
+				<font color="#333333">System Studies of 
+				Manas-Sankosh-Tista-Ganga (MSTG), Sponsored by National Water 
+				Development Agency, New Delhi (Co-PI).</font></p></li>
+				<li>
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
+				<font color="#333333">Study of river morphology in the Dudhnoi- 
+				Krishnai catchment to suggest sustainable protection measures 
+				for river bank erosion under the National Hydrology Project,&nbsp; 
+				Sponsored by Water Resource Department Government of Meghalaya 
+				(Co-PI).</font></p></li>
+				<li>
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
 				<font face="Book Antiqua" color="#333333">Feasibility and Design of 
 		Stormwater Drainage System for Rangia Military Station Based on 
 		Topographical Survey and Flood modeling, Sponsored by M/S: Garrison 
 		Engineer, Indian Army (Co-PI).</font></p></li>
 				<li>
-				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; line-height:150%">
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
 				<font color="#333333" face="Book Antiqua">Estimation of Soil Hydraulic 
 		Properties from Transient Infiltration Measurements, Sponsored by Indian 
 		Institute of Technology Guwahati, India under Startup Research 
 		Grant Program (PI).</font></p></li>
 				<li>
-				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; line-height:150%">
+				<p align="justify" style="margin-top: 12px; margin-bottom: 12px; ">
 				<font color="#333333" face="Book Antiqua">Development of a Risk Based Decision Support System for Flood 
 		Management, Sponsored by Department of Science and Technology (DST), 
 		Government of India under Fast Track Scheme for Young Scientist (PI). 
