--- a/researchinterest.html
+++ b/researchinterest.html
@@ -520,14 +520,13 @@ body {
 					<blockquote>
 						<p align="left" style="margin-top: 0; margin-bottom: 0; line-height:150%">
 						<span style="letter-spacing: 1pt">
-						<font face="Book Antiqua" color="#333333">Urban Flood Modeling</font></span></p>
+						<font face="Book Antiqua" color="#333333">Urban 
+						Hydrology</font></span></p>
 						<p align="left" style="margin-top: 0; margin-bottom: 0; line-height:150%">
 						<span style="letter-spacing: 1pt">
-						<font face="Book Antiqua" color="#333333">Urban Heat Island<br>Infiltration and Artificial Recharge 
-						<br>Climate Change</font></span></p>
-						<p align="left" style="margin-top: 0; margin-bottom: 0; line-height:150%">
-						<span style="letter-spacing: 1pt">
-						<font face="Book Antiqua" color="#333333">Transient Flow Analysis</font></span></p>
+						<font face="Book Antiqua" color="#333333">Hydroclimatic 
+						Extremes<br>Infiltration and Artificial Recharge 
+						<br>Transient Flow </font></span></p>
 						<p align="left" style="margin-top: 0; margin-bottom: 0; line-height:150%">
 						<span style="letter-spacing: 1pt">
 						<font face="Book Antiqua" color="#333333">River Mechanics
