--- a/researchgroup.html
+++ b/researchgroup.html
@@ -631,7 +631,7 @@ body {
 						<p class="MsoNormal" style="text-indent:0in; margin-top:0; margin-bottom:0">
 						<font face="Book Antiqua" size="3">Submitted</font></p>
 						<p class="MsoNormal" style="text-indent:0in; margin-top:0; margin-bottom:0">
-						<font face="Book Antiqua" size="3">As Co supervisor</font></p>
+						<font face="Book Antiqua" size="3">&nbsp;(Co supervisor)</font></p>
 						</td>
 					</tr>
 					<tr>
