--- a/journals.html
+++ b/journals.html
@@ -549,7 +549,7 @@ body {
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					Shejule, P. A., and S. Pekkat, (2024). 
 				Hybrid Model for Multistep-Ahead Rainfall Forecast in Northeast 
-				India: A Comparative Study. <i>J. Hydrometeor</i>., 25, 1221–1236, 
+				India: A Comparative Study. <i>J. Hydrometeor</i>., 25, 1221-1236, 
 					<a href="https://doi.org/10.1175/JHM-D-23-0173.1">https://doi.org/10.1175/JHM-D-23-0173.1</a>, 
 					American Meteorological Society.</p></li>
 					<li>
