--- a/journals.html
+++ b/journals.html
@@ -418,7 +418,8 @@ body {
     <div class="dropdown-content">
       <p style="margin-top: 0; margin-bottom: 0" align="left">
       <font face="Book Antiqua">
-      <a href="./journals.html">Journals</a></font></p>
+      <a href="./journals.html">
+      Journals</a></font></p>
 		<p style="margin-top: 0; margin-bottom: 0" align="left">
 		<font face="Book Antiqua">
       	<a href="./conferences.html">
