--- a/journals.html
+++ b/journals.html
@@ -566,8 +566,8 @@ body {
 					Shejule, P. A., and S. Pekkat, (2024). 
 				Performance assessment of rainfall forecasting models for urban 
 				Guwahati City using machine learning techniques and singular 
-				spectrum analysis<br>S Priya Ashok, S Pekkat - Journal of Water and Climate Change, 
-				2024</p></li>
+				spectrum analysis.<i> Journal of Water and Climate Change</i>, 
+					15 (4), 1565 - 1587, https://doi.org/10.2166/wcc.2024.465.</p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					Naik, A. P., Norbu, T. and Pekkat, S. 
@@ -595,7 +595,7 @@ body {
 					</span></span>
 					<span style="line-height: 107%; font-family: 'Book Antiqua'">An appraisal on the soil wetting water retention characteristic curve 
 	determined from mini disk infltrometer and sensor measurements. <i>Acta 
-	Geophysica</i>, 71:961 - 982,
+	Geophysica</i>, 71: 961 - 982,
 						<a href="https://doi.org/10.1007/s11600-022-00932-2">
 					<font color="#000000">https://doi.org/10.1007/s11600-022-00932-2</font></a>.</span></span></p>
 					</li>
@@ -603,7 +603,8 @@ body {
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="line-height: 107%; font-family: 'Book Antiqua'">Bora, M. J., Cai, W., Pekkat, S., Garg, A., and Sreedeep, S. (2023). 
 	Development of a simplified theoretical model to determine erodibility of 
-	compacted soil in hole erosion test based on fluid energy transformation. <i>Acta Geotechnica</i>, 18:5441 - 5455
+	compacted soil in hole erosion test based on fluid energy transformation. <i>Acta Geotechnica</i>, 18:5441 
+					- 5455
 						<a style="text-decoration: underline; text-underline: single" href="https://doi.org/10.1007/s11440-023-01877-6">
 					<font color="#000000">https://doi.org/10.1007/s11440-023-01877-6</font></a>.</span></p>
 					</li>
