--- a/journals.html
+++ b/journals.html
@@ -539,9 +539,9 @@ body {
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
-					Naik, A. P., and Pekkat, S. (2025). Critical Evaluation of 
-					Viability of Mini Disc Infiltrometer for Determining the 
-					Unsaturated Hydraulic Conductivity Function. <i>Journal of 
+					Naik, A. P., and Pekkat, S. (2025). Critical evaluation of 
+					viability of mini disc infiltrometer for determining the 
+					unsaturated hydraulic conductivity function. <i>Journal of 
 					Irrigation and Drainage Engineering</i>, 151(3), 10461,
 					<a href="https://doi.org/10.1061/JIDEDH.IRENG-1046">
 					https://doi.org/10.1061/JIDEDH.IRENG-1046</a>, ASCE.</p>
@@ -549,8 +549,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					Shejule, P. A., and S. Pekkat, (2024). 
-				Hybrid Model for Multistep-Ahead Rainfall Forecast in Northeast 
-				India: A Comparative Study. <i>J. Hydrometeor</i>., 25, 1221-1236, 
+				Hybrid model for multistep-ahead rainfall forecast in northeast 
+				India: A comparative study. <i>J. Hydrometeor</i>., 25, 1221-1236, 
 					<a href="https://doi.org/10.1175/JHM-D-23-0173.1">https://doi.org/10.1175/JHM-D-23-0173.1</a>, 
 					American Meteorological Society.</p></li>
 					<li>
@@ -563,13 +563,12 @@ body {
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
-					Shejule, P. A., and S. Pekkat, (2024). 
-				Performance assessment of rainfall forecasting models for urban 
-				Guwahati City using machine learning techniques and singular 
-				spectrum analysis.<i> Journal of Water and Climate Change</i>, 
+					Shejule, P. A., and S. Pekkat, (2024).	Performance assessment of rainfall forecasting models for urban 
+				Guwahati city using machine learning techniques and singular spectrum analysis.<i> Journal of Water and Climate Change</i>, 
 					15 (4), 1565 - 1587, https://doi.org/10.2166/wcc.2024.465.</p>
 					</li>
 					<li>
+					
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					Naik, A. P., Norbu, T. and Pekkat, S. 
 	(2024). Comparison of flux-based and head-based methods for determination of 
@@ -622,10 +621,27 @@ body {
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Naik, A. P., and Pekkat, S. (2022). Time Dependence of Hydraulic Parameters 
-	Estimation from Transient</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Naik, A. P., and Pekkat, S. (2022). Time </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					d</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ependence of </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					h</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ydraulic </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					p</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">arameters 
+	</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					e</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">stimation from </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					t</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ransient</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					</span>
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Analysis of Mini Disc Infiltrometer Measurements</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					a<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">nalysis of </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					m</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ini </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					d</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">isc </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					i</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">nfiltrometer </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					m</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">easurements</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					<i>European Journal of Soil Science<b>, </b></i></span>
 					<a href="https://doi.org/10.1111/ejss.13228">
 					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
@@ -633,9 +649,33 @@ body {
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Ghosh, B., AP Naik, and Pekkat, S. (2022). Rectangular Hyperbola Method for 
-	the Estimation of Soil Near Surface Hydraulic Conductivity Based on Short 
-	Term Infiltration Measurements</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Ghosh, B., AP Naik, and Pekkat, S. (2022). Rectangular </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					h</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">yperbola </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					m</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ethod for 
+	the </span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					e</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">stimation of </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					s</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">oil </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					n</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ear </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					s</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">urface </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					h</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ydraulic </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					c</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">onductivity </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					b</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">ased on </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					s</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">hort </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					t</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">erm </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					i</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">nfiltration </span>
+					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
+					m</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">easurements</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					<i>Eurasian Soil Science</i>, 55 
 	(12), 1761-1769. </span></p></li>
 					<li>
@@ -686,8 +726,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span lang="en-us">Ghosh, B. and 
-	Sreeja P. (2019). Effect of Initial Compaction State on Near-Saturated 
-	Hydraulic Conductivity, <i>Journal of Irrigation and 
+	Sreeja P. (2019). Effect of initial compaction state on near-saturated 
+					hydraulic conductivity, <i>Journal of Irrigation and 
 	Drainage Engineering</i>, ASCE, 145 (12), 04019028.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -698,8 +738,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; " lang="en-us">Ghosh, 
-	B. and Sreeja P. (2019). An Appraisal on the Interpolation Methods Used for 
-	Predicting Spatial Variability of Field Hydraulic Conductivity. <i>Water 
+	B. and Sreeja P. (2019). An appraisal on the interpolation methods used for 
+					predicting spatial variability of field hydraulic conductivity. <i>Water 
 	Resources Management</i>, Springer, 33 (6), 2175-2190.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -710,8 +750,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span lang="EN-US" style="font-family: Book Antiqua; ">Ghosh, B., Sreeja P., and Yamsani, S. K. (2019). 
-	Evaluation of Infiltrometers and Permeameters for Measuring Hydraulic 
-	Conductivity. <i>Advances in Civil Engineering Materials</i>, ASTM, 8(1),
+	Evaluation of infiltrometers and permeameters for measuring hydraulic 
+					conductivity. <i>Advances in Civil Engineering Materials</i>, ASTM, 8(1),
 						<font color="#222222">
 					<a href="https://doi.org/10.1520/ACEM20180056">
 					<font color="#000000"><span style="text-decoration: none">https://doi.org/10.1520/ACEM20180056</span></font></a></font>.</span></p>
@@ -743,14 +783,14 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; ">Sahoo, S. N. and 
-	Sreeja, P. (2016). Determination of Effective Impervious Area for an Urban 
-	Indian Catchment. <i>Journal of Hydrologic Engineering</i>, ASCE, 05016004 (1-10).</span></p>
+	Sreeja, P. (2016). Determination of effective impervious area for an urban 
+	Indian catchment. <i>Journal of Hydrologic Engineering</i>, ASCE, 05016004 (1-10).</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; ">Sahoo, S. N. and 
-	Sreeja, P. (2015). Development of Flood Inundation Maps and Quantification 
-	of Flood Risk in an Urban Catchment of Brahmaputra River. <i>Journal of Risk 
+	Sreeja, P. (2015). Development of flood inundation maps and quantification 
+	of flood risk in an urban catchment of Brahmaputra river. <i>Journal of Risk 
 	and Uncertainty in Engineering Systems, Part A: Civ. Eng.</i>, ASCE-ASME, 
 	A4015001(1-11).</span></p></li>
 					<li>
@@ -768,8 +808,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; ">Sahoo, S. N. and 
-	Sreeja, P. (2013). A review of Decision Support System Application in Flood 
-	Management. <i>International Journal of Hydrology Science and Technology,
+	Sreeja, P. (2013). A review of decision support system application in flood 
+					management. <i>International Journal of Hydrology Science and Technology,
 						</i>Inderscience Publication, 3 (3), 206-220.</span></p>
 					</li>
 					<li>
@@ -803,8 +843,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sahoo, S. N., and Sreeja, P. (2012). 
-	Application of Geospatial Technologies to Determine Imperviousness in Peri-Urban 
-	Areas. <i>International Journal of Remote Sensing Applications</i>, 2(4), 
+	Application of geospatial technologies to determine imperviousness in peri-urban 
+					areas. <i>International Journal of Remote Sensing Applications</i>, 2(4), 
 	47-51.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -821,27 +861,26 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sahoo, S. N. and Sreeja, P (2011). 
-	Total and Effective Impervious Area from low resolution satellite 
+	Total and effective impervious area from low resolution satellite 
 	imageries. &nbsp;<i>International Journal of Earth Sciences and Engineering,&nbsp;</i>4 
 	(6), 334-337.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sreeja, P. and Gupta, K. (2008). 
-	Transfer Function Formulation of Saint Venant' s Equations for Modeling 
-	Drainage Channel Flow : An Experimental Evaluation. <i>Water Resources 
+	Transfer function formulation of Saint Venant' s equations for modeling 
+					drainage channel flow : An experimental evaluation. <i>Water Resources 
 	Management,&nbsp;</i> 22 (12), 1881-1898.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sreeja, P. and Gupta, 
-	K. (2007). An Alternate Approach for Transient Flow Modeling in Urban 
-	Drainage Systems. <i>Water 
+	K. (2007). An alternate approach for transient flow modeling in urban 
+					drainage systems. <i>Water 
 	Resources Management,&nbsp;</i>Springer Publication, 21(7), 1225-1244.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sreeja, P. and Gupta, K. (2006). 
-	Modeling of Detention Tank-Gate System using Frequency and Time Domain 
-	Approach.&nbsp;<i>ISH Journal of Hydraulic Engineering,</i>&nbsp;12(1), 110-120.</span></p>
+	Modeling of detention tank-gate system using frequency and time domain approach.&nbsp;<i>ISH Journal of Hydraulic Engineering,</i>&nbsp;12(1), 110-120.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -851,8 +890,8 @@ body {
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua">Sreeja, P. and Jyothis Thomas 
-	(2006). Evaluation of Linear Perturbation Model for Rainfall-Runoff 
-	Transformation.&nbsp;<i>Journal of Applied Hydrology</i>, XIX (1-2), 46-58.</span></p>
+	(2006). Evaluation of linear perturbation model for rainfall-runoff 
+					transformation.&nbsp;<i>Journal of Applied Hydrology</i>, XIX (1-2), 46-58.</span></p>
 			</ol>
 		</blockquote>
 		<div class="icon-bar">
@@ -864,7 +903,7 @@ body {
 			</div></tr>
 	</table>
   
-  </div>
+  <p>&nbsp;</div>
   
   <table border="0" align="center" cellpadding="2" cellspacing="2" width="1357" style="border-width: 0px">
     <tr> 
