--- a/journals.html
+++ b/journals.html
@@ -526,8 +526,9 @@ body {
 					duration frequency curves to unravel temperature extremes 
 					incorporating climate change across India. <i>Urban Climate</i>, 
 					61, 102494,
+					<b>
 					<a href="https://doi.org/10.1016/j.uclim.2025.102494">
-					<font color="#008000">https://doi.org/10.1016/j.uclim.2025.102494</font></a>, Elsevier.</p>
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1016/j.uclim.2025.102494</span></font></a></b>, Elsevier.</p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -537,7 +538,7 @@ body {
 				wilting and plant survival time in a polymer-amended soil. <i>Soil and Tillage Research</i>, 106371, 
 					
 					<a href="https://doi.org/10.1016/j.still.2024.106371">
-					<font color="#008000">https://doi.org/10.1016/j.still.2024.106371</span></font></a>, Elsevier.</p>
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1016/j.still.2024.106371</span></span></font></a>, Elsevier.</p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -545,7 +546,7 @@ body {
 					viability of mini disc infiltrometer for determining the 
 					unsaturated hydraulic conductivity function. <i>Journal of 
 					Irrigation and Drainage Engineering</i>, 151(3), 10461,
-					<a property="sameAs" style="box-sizing: border-box; cursor: pointer; color: #008000; text-decoration: underline; transition: 'background 0.15s ease-in-out', 'color 0.15s ease-in-out'; outline-width: 0px; filter: none; line-height: 1; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 500; letter-spacing: normal; orphans: 2; text-align: start; text-indent: -20px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; background-color: rgb(255, 255, 255)" href="https://doi.org/10.1061/JIDEDH.IRENG-10461">
+					<a property="sameAs" style="box-sizing: border-box; cursor: pointer; color: #008000; text-decoration: none; transition: 'background 0.15s ease-in-out', 'color 0.15s ease-in-out'; outline-width: 0px; filter: none; line-height: 1; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 500; letter-spacing: normal; orphans: 2; text-align: start; text-indent: -20px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; background-color: rgb(255, 255, 255)" href="https://doi.org/10.1061/JIDEDH.IRENG-10461">
 					https://doi.org/10.1061/JIDEDH.IRENG-1046</a>, ASCE.</p>
 					</li>
 					<li>
@@ -554,7 +555,7 @@ body {
 				Hybrid model for multistep-ahead rainfall forecast in northeast 
 				India: A comparative study. <i>J. Hydrometeor</i>., 25, 1221-1236, 
 					<a href="https://doi.org/10.1175/JHM-D-23-0173.1">
-					<font color="#008000">https://doi.org/10.1175/JHM-D-23-0173.1</font></a>, 
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1175/JHM-D-23-0173.1</span></font></a>, 
 					American Meteorological Society.</p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -562,14 +563,14 @@ body {
 	climate models for projected changes in temperature over Indian 
 	subcontinent. <i>Scientific Reports</i>, 14:3076.
 						<a href="https://doi.org/10.1038/s41598-024-52275-1">
-					<font color="#008000">https://doi.org/10.1038/s41598-024-52275-1</font></a>.</span></p>
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1038/s41598-024-52275-1</span></font></a>.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					Shejule, P. A., and S. Pekkat, (2024).	Performance assessment of rainfall forecasting models for urban 
 				Guwahati city using machine learning techniques and singular spectrum analysis.<i> Journal of Water and Climate Change</i>, 
 					15 (4), 1565 - 1587, 
-					<a target="_blank" style="vertical-align: baseline; color: #008000; cursor: pointer; word-break: normal; font-weight: 400; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; border: 0px none; margin: 0px; padding: 0px; background-color: rgb(255, 255, 255)" href="https://doi.org/10.2166/wcc.2024.465">
+					<a target="_blank" style="vertical-align: baseline; color: #008000; cursor: pointer; word-break: normal; font-weight: 400; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; border: 0px none; margin: 0px; padding: 0px; background-color: rgb(255, 255, 255); text-decoration:none" href="https://doi.org/10.2166/wcc.2024.465">
 					https://doi.org/10.2166/wcc.2024.465</a> .</p>
 					</li>
 					<li>
@@ -579,7 +580,7 @@ body {
 	(2024). Comparison of flux-based and head-based methods for determination of 
 	near-surface saturated hydraulic conductivity. <i>Hydrological Sciences 
 	Journal</i>, <font size="3">
-					<a style="box-sizing: border-box; color: #008000; word-break: break-all; margin-left: 0px; margin-right: 0.25em; margin-top: 0px; margin-bottom: 0px" href="https://doi.org/10.1080/02626667.2024.2305745">
+					<a style="box-sizing: border-box; color: #008000; word-break: break-all; margin-left: 0px; margin-right: 0.25em; margin-top: 0px; margin-bottom: 0px; text-decoration:none" href="https://doi.org/10.1080/02626667.2024.2305745">
 					https://doi.org/10.1080/02626667.2024.2305745</a>. </font></p></li>
 					<li>
 					
@@ -589,7 +590,7 @@ body {
 	rainfall intensity duration frequency curves for an urbanized catchment 
 	incorporating climate change. <i>Journal of Hydrologic Engineering,</i> 28 
 					(7),&nbsp; ASCE, </span>
-					<a property="sameAs" style="box-sizing: border-box; cursor: pointer; color: #008000; text-decoration: underline; transition: 'background 0.15s ease-in-out', 'color 0.15s ease-in-out'; outline-width: 0px; filter: none; line-height: 1; background-color: transparent" href="https://doi.org/10.1061/JHYEFF.HEENG-5577">
+					<a property="sameAs" style="box-sizing: border-box; cursor: pointer; color: #008000; text-decoration: none; transition: 'background 0.15s ease-in-out', 'color 0.15s ease-in-out'; outline-width: 0px; filter: none; line-height: 1; background-color: transparent" href="https://doi.org/10.1061/JHYEFF.HEENG-5577">
 					https://doi.org/10.1061/JHYEFF.HEENG-5577</a> .</p></font>
 					</font>
 					<font face="Montserrat, Montserrat Subset, sans-serif" style="font-size: 12px">
@@ -605,7 +606,7 @@ body {
 	incorporating climate change. <i>Sustainable Cities and Society</i>, 95, 
 	104601, </span><a class="anchor doi anchor-primary" target="_blank" rel="noreferrer noopener" aria-label="Persistent link using digital object identifier" title="Persistent link using digital object identifier" style="box-sizing: border-box; word-break: break-word; --sd-ui-anchor-border-bottom-colour: transparent; --sd-ui-anchor-border-bottom-colour-hover: #eb6500; --sd-ui-anchor-border-bottom-width: 2px; --sd-ui-anchor-border-bottom-width-hover: 2px; --sd-ui-anchor-colour: #0272b1; --sd-ui-anchor-colour-focus: #eb6500; --sd-ui-anchor-cursor: pointer; --sd-ui-anchor-font-size: 1em; --sd-ui-anchor-gap: calc(0.5em - 2px); --sd-ui-anchor-icon-colour: currentColor; --sd-ui-anchor-icon-size: calc(1em + 4px); --sd-ui-anchor-icon-external-link-size: clamp(8px, 0.5em, 0.5em); color: #008000; cursor: pointer; line-height: 22px; outline-width: 0px; font-style: normal; font-variant-ligatures: normal; font-variant-caps: normal; font-weight: 400; letter-spacing: normal; orphans: 2; text-align: start; text-indent: 0px; text-transform: none; widows: 2; word-spacing: 0px; -webkit-text-stroke-width: 0px; white-space: normal; margin: 0px; padding: 0px; background-color: rgba(0, 0, 0, 0)" href="https://doi.org/10.1016/j.scs.2023.104601">
 					<span class="anchor-text-container" style="box-sizing: border-box; margin: 0px; padding: 0px;">
-					<span class="anchor-text" style="box-sizing: border-box; margin: 0px; padding: 0px; border-bottom: 1.6px solid rgb(235, 101, 0); transition: border-bottom-color 0.3s;">
+					<span class="anchor-text" style="box-sizing: border-box; margin: 0px; padding: 0px; border-bottom: 1.6px solid rgb(235, 101, 0); transition: border-bottom-color 0.3s; text-decoration:none">
 					https://doi.org/10.1016/j.scs.2023.104601</span></span></a><span style="line-height: 107%; font-family: 'Book Antiqua'">.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -618,7 +619,7 @@ body {
 	determined from mini disk infltrometer and sensor measurements. <i>Acta 
 	Geophysica</i>, 71: 961 - 982,
 						<a href="https://doi.org/10.1007/s11600-022-00932-2">
-					<font color="#000000">https://doi.org/10.1007/s11600-022-00932-2</font></a>.</span></span></p>
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1007/s11600-022-00932-2</span></font></a>.</span></span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -626,8 +627,8 @@ body {
 	Development of a simplified theoretical model to determine erodibility of 
 	compacted soil in hole erosion test based on fluid energy transformation. <i>Acta Geotechnica</i>, 18:5441 
 					- 5455
-						<a style="text-decoration: underline; text-underline: single" href="https://doi.org/10.1007/s11440-023-01877-6">
-					<font color="#000000">https://doi.org/10.1007/s11440-023-01877-6</font></a>.</span></p>
+						<a style="text-decoration: none; text-underline: single" href="https://doi.org/10.1007/s11440-023-01877-6">
+					<font color="#008000">https://doi.org/10.1007/s11440-023-01877-6</font></a>.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">Shejule, P. A.,<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black"> and Pekkat, 
@@ -636,8 +637,8 @@ body {
 	techniques</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					<i>Journal of Water and Climate Change</i>, </span>
 					<a href="https://doi.org/10.2166/wcc.2022.302">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
-					<font color="#000000">https://doi.org/10.2166/wcc.2022.302</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; text-decoration:none">
+					<font color="#008000">https://doi.org/10.2166/wcc.2022.302</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -663,8 +664,8 @@ body {
 					<span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">m</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">easurements</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					<i>European Journal of Soil Science<b>, </b></i></span>
 					<a href="https://doi.org/10.1111/ejss.13228">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
-					<font color="#000000">https://doi.org/10.1111/ejss.13228</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; text-decoration:none">
+					<font color="#008000">https://doi.org/10.1111/ejss.13228</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -701,8 +702,8 @@ body {
 					<span style="line-height: 107%; font-family: 'Book Antiqua'">Bora, M., J., Bordoloi, S., Pekkat, S., Garg, A., and Sreedeep, S. and 
 	Rakesh, R., R. (2022). Assessment of soil erosion models for predicting soil 
 	loss in cracked vegetated compacted surface layer. <i>Acta Geophysica</i>, 
-	70:333 - 347 <a href="https://doi.org/10.1007/s11600-021-00698-z">
-					<font color="#000000">https://doi.org/10.1007/s11600-021-00698-z</font></a>.</span></p>
+	70:333 - 347, <a href="https://doi.org/10.1007/s11600-021-00698-z">
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1007/s11600-021-00698-z</span></font></a>.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -711,8 +712,8 @@ body {
 	erosion tests. <i>Acta Geophys</i></span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black"><i>ica</i>,
 						</span>
 					<a href="https://doi.org/10.1007/s11600-022-00904-6">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
-					<font color="#000000">https://doi.org/10.1007/s11600-022-00904-6</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; text-decoration:none">
+					<font color="#008000">https://doi.org/10.1007/s11600-022-00904-6</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -723,8 +724,8 @@ body {
 					<i>International Journal of Damage Mechanics</i>, 30 (4), 484</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">-</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">501, SAGE Journal, 
 						</span>
 					<a href="https://doi.org/10.1177/1056789520925524">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
-					<font color="#000000">https://doi.org/10.1177/1056789520925524</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; text-decoration:none">
+					<font color="#008000">https://doi.org/10.1177/1056789520925524</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -733,14 +734,16 @@ body {
 	hydraulic parameters using combined experimental and numerical investigation</span><span style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">
 					<i>Biomass Conversion and Biorefinery</i>, </span>
 					<a href="https://doi.org/10.1007/s13399-020-01109-x">
-					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'">
-					<font color="#000000">https://doi.org/10.1007/s13399-020-01109-x</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; text-decoration:none">
+					<font color="#008000">https://doi.org/10.1007/s13399-020-01109-x</font></span></a><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">Cai, W., Bora, M. Pekkat, S. Bordoloi, S., Garg, A., and Sekharan, S. 
 	(2020). A novel analytical model for determining erosion from hole erosion 
-	tests. <i>Authorea</i>. DOI: 10.22541/au.159569155.55654761.</span></p></li>
+	tests. <i>Authorea</i>. DOI: </span><font color="#008000">
+					<span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; ">
+					10.22541/au.159569155.55654761</span></font><span lang="EN-IN" style="line-height: 150%; font-family: 'Book Antiqua'; color: black">.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span lang="en-us">Ghosh, B. and 
@@ -752,7 +755,7 @@ body {
 					<span lang="EN-US" style="font-family: Book Antiqua; ">Ghosh, 
 	B. and Sreeja P. (2019). A critical evaluation of measurement induced 
 	variability in infiltration characteristics for a river sub-catchment, <i>Measurement</i>, Elsevier, 132, 47-59, DOI: 
-	10.1016/j.measurement.2018.09.018.</span></p></li>
+					<font color="#008000">10.1016/j.measurement.2018.09.018</font>.</span></p></li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; " lang="en-us">Ghosh, 
@@ -773,7 +776,7 @@ body {
 					conductivity. <i>Advances in Civil Engineering Materials</i>, ASTM, 8(1),
 						<font color="#222222">
 					<a href="https://doi.org/10.1520/ACEM20180056">
-					<font color="#000000"><span style="text-decoration: none">https://doi.org/10.1520/ACEM20180056</span></font></a></font>.</span></p>
+					<font color="#008000"><span style="text-decoration: none">https://doi.org/10.1520/ACEM20180056</span></font></a></font>.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
@@ -796,7 +799,7 @@ body {
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
 					<span style="font-family: Book Antiqua; ">Sahoo, S. N. and 
 	Sreeja, P. (2016). Relationship between peak rainfall intensity (PRI) and 
-	maximum flood depth (MFD) in an urban catchment of Northeast India. <i>Natural Hazards</i>, Springer, 83:1527-1544 DOI:10.1007/s11069-016-2374-1.</span></p>
+	maximum flood depth (MFD) in an urban catchment of Northeast India. <i>Natural Hazards</i>, Springer, 83:1527-1544 DOI:<font color="#008000">10.1007/s11069-016-2374-1</font>.</span></p>
 					</li>
 					<li>
 					<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
