--- a/conferences.html
+++ b/conferences.html
@@ -579,7 +579,7 @@ body {
 						<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">Shejule, P. A., and S. Pekkat, (2022). 
 	Rainfall Forecast by Identification of Characteristic Components of Rainfall 
 	Using Sinular Spectrum Analysis, Proceedings of the 19th Annual Meeting of 
-	the Asia Oceania Geosciences Society (AOGS 2022) Singapore, 01–05 August 
+	the Asia Oceania Geosciences Society (AOGS 2022) Singapore, 01- 05 August 
 	2022. </p>
 						<li>
 						<p align="justify" style="line-height: 150%; margin-top:12px; margin-bottom:12px">
