--- a/technicaltalks.html
+++ b/technicaltalks.html
@@ -522,7 +522,7 @@ body {
 			Flood Modeling and Flood Risk Quantification Considering Land use 
 			and Climate Changes</span><span style="line-height: 150%; font-family: Book Antiqua">, 
 			Karyashala- <br>The high end workshop on Flood Risk Management using 
-			Hydro-informatics Techniques March 18 – 19, 2024,
+			Hydro-informatics Techniques March 18 - 19, 2024,
 			</span><span lang="EN-IN" style="line-height: 150%; font-family: Book Antiqua">Organized by Centre for Water Resources Development and Management (CWRDM)</span><span style="line-height: 150%; font-family: Book Antiqua">.</span></p>
 						</li>
 						<li>
