--- a/bookchapters.html
+++ b/bookchapters.html
@@ -536,7 +536,7 @@ body {
 	Pekkat, S. (2023). Climate Change and Its Impact on Surface Runoff 
 	Characteristics of an Urban Catchment. <i>Sustainable Water Resources 
 	Management</i>, Advances in Sustainability Science and Technology, Springer, 
-	Singapore, 3 - 11.DOI: <a href="https://doi.org/10.1007/978-981-16-7535-5_1">
+	Singapore, 3 - 11, <a href="https://doi.org/10.1007/978-981-16-7535-5_1">
 				<font color="#000000">https://doi.org/10.1007/978-981-16-7535-5_1</font></a>, 
 				Springer Singapore (Editors: Bhattacharjya, R. K., Talukdar, B., 
 				Katsifarakis, K. L.).</span></p>
